# vertesine

./: .gitignore  CMakeLists.txt  README.md  permissions.txt  util.c  util.h  vertesine.project
comments/: CMakeLists.txt  comments.c  comments.h
config/: lighttpd_config.conf  nginx_config.conf
find/: Findkcgi.cmake
home/: CMakeLists.txt  home.c  home.h  manage.c  manage.h  post.c  post.h  user.c  user.h
home/modules/: home_page.c
html/: basecontainer_begin.htmpl  create_entry.htmpl  default_page.htmpl  entry_list_data.htmpl  error.htmpl  footer.htmpl  header.htmpl  index.md  markup_editor.htmpl  navbar.htmpl  navigator.htmpl  notification.htmpl  style.css  user_edit.htmpl  user_info.htmpl  user_list_data.htmpl  user_view.htmpl
html/about/: index.htmpl  index.md
html/comments/: vertesine_comments_style.css
html/confirm_logout/: index.htmpl
html/entries/: index.htmpl
html/ext/highlight/: highlight.pack.js
html/login/: index.htmpl
html/logout/: index.htmpl
html/manage/: index.htmpl
html/register/: index.htmpl
html/status/: index.htmpl
html/testpage/: index.htmpl
html/users/: index.htmpl
lib/snowflake/: snowflake.c  snowflake.h  stats.h
manager/: CMakeLists.txt  main.c
res/cgi_data/vertesine/: home.html  manage.html  navbar.html  notification.html  notifications.txt
res/cgi_data/vertesine/about/: about.html
res/cgi_data/vertesine/confirm_logout/: confirm_logout.html
res/cgi_data/vertesine/entries/: entries.html
res/cgi_data/vertesine/login/: login.html
res/cgi_data/vertesine/register/: register.html
res/cgi_data/vertesine/user/: edit_user.html  user.html
res/vertesine/: style.css
res/vertesine/comments/: vertesine_comments.js  vertesine_comments_style.css
src/: cache.c  cache.h  main.c  templating.c  templating.h  util.c  util.h
src/pages/: pages.c  pages.h  tests.h  vertesine_custom_templates.c  vertesine_custom_templates.h  vertesine_util.c  vertesine_util.h
